remove extra column of table in dashboard/home, input for refuel and allvehicle report

--- a/public/app/report/all_vehicle_summary.html
+++ b/public/app/report/all_vehicle_summary.html
@@ -1,6 +1,6 @@
 <p class="headerrow">All Vehicle Summary</p>
 <div class="row">
-    <div class="col s12 m12 l12" ng-if="vm.loaded">
+    <div class="col s12 m12 l12">
         <div class="col s12 m12 l3">
             <p>Vehicle Number Plate: <input type="text" id="platenumber" ng-model="vm.plate_number"></p>
         </div>
@@ -35,7 +35,6 @@
         <table>
             <thead>
                 <tr>
-                    <td>No</td>
                     <td>Username</td>
                     <td>Plate No</td>
                     <td>Fuel</td>
@@ -51,7 +50,6 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>1</td>
                     <td>Dennis</td>
                     <td>ABC1234</td>
                     <td>800</td>
