--- a/public/app/report/refuel.html
+++ b/public/app/report/refuel.html
@@ -1,6 +1,6 @@
 <p class="headerrow">Refuel Report</p>
 <div class="row">
-    <div class="col s12 m12 l12" ng-if="vm.loaded">
+    <div class="col s12 m12 l12">
         <div class="col s12 m12 l3">
             <p>Vehicle Number Plate: <input type="text" id="platenumber" ng-model="vm.plate_number"></p>
         </div>
