Completed refuel variation and refuel consumption + bug fixes in vehicle mileage

--- a/public/app/dashboard/dashboard.html
+++ b/public/app/dashboard/dashboard.html
@@ -4,7 +4,7 @@
             <ul class="left hide-on-med-and-down">
                 <li class="menu"><a ui-sref=".home">Dashboard</a></li>
                 <li class="menu"><a ui-sref=".vehicle_tracking">Vehicle tracking</a></li>
-                <li class="menu"><a ui-sref=".settings">Settings</a></li>
+                <!--<li class="menu"><a ui-sref=".settings">Settings</a></li>-->
                 <li class="menu"><a ui-sref=".reports">Reports</a></li>
                 <li class="menu"><a ui-sref=".toll">Toll</a></li>
             </ul>
