--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="/libs/materialize/dist/css/materialize.min.css"></link>
         <link rel="stylesheet" href="/libs/components-font-awesome/css/font-awesome.min.css"></link>
+        <link rel="stylesheet" href="/libs/angular-chart.js/dist/angular-chart.min.css"></link>
         <link rel="stylesheet" href="/assets/css/style.css">
         <title>Could Vehicle</title>
         <base href="/">
@@ -83,6 +84,8 @@
         <script src="libs/materialize/dist/js/materialize.min.js"></script>
         <script src="https://rawgithub.com/eligrey/FileSaver.js/master/FileSaver.js" type="text/javascript"></script>
         <script src="libs/angularUtils-pagination/dirPagination.js" type="text/javascript"></script>
+        <script src="libs/Chart.js/Chart.js" type="text/javascript"></script>
+        <script src="libs/angular-chart.js/dist/angular-chart.min.js" type="text/javascript"></script>
     	<script src="app/app.module.js"></script>
         <script src="app/app.config.js"></script>
         <script src="app/app.run.js"></script>
@@ -100,6 +103,8 @@
         <script src="app/report/driving_records.js"></script>
         <script src="app/report/vehicle_mileage.js"></script>
         <script src="app/report/idle.js"></script>
+        <script src="app/report/fuel_consumption.js"></script>
+        <script src="app/report/variation.js"></script>
         <script src="app/admin/home.js"></script>
         <script src="app/admin/users.js"></script>
         <script src="app/admin/location.js"></script>
