Allow admin to add fuel cost per liter

--- a/public/app/admin/home.html
+++ b/public/app/admin/home.html
@@ -1,5 +1,6 @@
 <div class="admin">
     <ul id="slide-out" class="side-nav fixed admin_side_nav">
+        <li><a ui-sref=".refuel">Refuel Cost</a></li>
         <li><a ui-sref=".users">Users</a></li>
         <li><a ui-sref=".location">Location</a></li>
     </ul>
