--- a/public/app/report/all_vehicle_summary.html
+++ b/public/app/report/all_vehicle_summary.html
@@ -2,7 +2,9 @@
 <div class="row">
     <div class="col s12 m12 l12">
         <div class="col s12 m12 l3">
-            <p>Vehicle Number Plate: <input type="text" id="platenumber" ng-model="vm.plate_number"></p>
+            <span>Vehicle Group: </span>
+            <select class="browser-default" ng-model="vm.group_selected" ng-options="group.group for group in vm.group">
+            </select>
         </div>
 
         <div class="col s12 m12 l4">
@@ -15,7 +17,7 @@
                 </div>
             </div>
 
-            <div class="col s12 m12 l12" style="margin-top:2%">
+            <div class="col s12 m12 l12">
                 <div class="col s12 m12 l2">
                     To:
                 </div>
@@ -26,7 +28,7 @@
         </div>
 
         <div class="col s12 m12 l2">
-            <a class="btn" ng-click="vm.get_idle()">Statistics</a>
+            <a class="btn" ng-click="vm.get_summary()">Statistics</a>
             <a class="btn buttonspace" ng-click="vm.export_data()">Export</a>
         </div>
     </div>
