Fixed variation display style and created all summary logics

--- a/public/app/report/variation.html
+++ b/public/app/report/variation.html
@@ -1,4 +1,4 @@
-<p class="headerrow">Refuel Report</p>
+<p class="headerrow">Variation Fuel</p>
 <div class="row" ng-if="vm.loaded">
     <div class="col s12 m12 l12">
         <div class="col s12 m12 l3">
