--- a/public/app/report/all_vehicle_summary.html
+++ b/public/app/report/all_vehicle_summary.html
@@ -1,6 +1,6 @@
 <p class="headerrow">All Vehicle Summary</p>
 <div class="row">
-    <div class="col s12 m12 l12">
+    <div class="col s12 m12 l12" ng-if="vm.loaded">
         <div class="col s12 m12 l3">
             <span>Vehicle Group: </span>
             <select class="browser-default" ng-model="vm.group_selected" ng-options="group.group for group in vm.group">
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div class="col l12">
+    <div class="col l12" ng-if="vm.all_car_full.cars.length">
         <table>
             <thead>
                 <tr>
@@ -43,7 +43,7 @@
                     <td>Fuel Cost</td>
                     <td>KM - L</td>
                     <td>Refuel</td>
-                    <td>Cost</td>
+                    <td>Refuel Cost</td>
                     <td>Idling Time</td>
                     <td>Idling Fuel</td>
                     <td>Total Idling Cost</td>
@@ -51,20 +51,71 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr dir-paginate="mileage  in vm.all_car_full.cars | itemsPerPage: vm.per_page">
                     <td>Dennis</td>
-                    <td>ABC1234</td>
-                    <td>800</td>
-                    <td>RM 125.54</td>
-                    <td>65.123Km</td>
-                    <td>1 Time</td>
-                    <td>RM125.54</td>
-                    <td>01:43:24</td>
-                    <td>45</td>
-                    <td>RM1.554</td>
-                    <td>4:25:10</td>
+                    <td>{{mileage.plate_number}}</td>
+                    <td>{{mileage.fuel_used}}</td>
+                    <td>RM {{mileage.fuel_total_cost | number:2}}</td>
+                    <td>{{mileage.kl_l | number:3}}Km</td>
+                    <td>{{mileage.refuel}}</td>
+                    <td>{{mileage.refuel_cost | number:2}}</td>
+                    <td>{{mileage.total_idle_hours | number:2}}</td>
+                    <td>{{mileage.total_idle_fuel}}</td>
+                    <td>RM {{mileage.total_idle_cost | number:2}}</td>
+                    <td>{{mileage.total_travel | number:2}}</td>
                 </tr>
             </tbody>
         </table>
+    </div>
+    <div class="divider"></div>
+    <div class="row"  ng-if="vm.all_car_full.cars.length">
+        <dir-pagination-controls class="pagination" style="margin: 0 auto;    text-align: center;"
+            max-size="7"
+            direction-links="true"
+            boundary-links="true" >
+            </dir-pagination-controls>
+    </div>
+    <div class="row" style="text-align:center; padding-top:10em;">
+        <div class="preloader-wrapper medium active" ng-if="vm.search_active || !vm.loaded">
+            <div class="spinner-layer spinner-blue">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-red">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-yellow">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
+
+            <div class="spinner-layer spinner-green">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
