--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,7 @@
         <script src="app/report/fuel_consumption.js"></script>
         <script src="app/report/variation.js"></script>
         <script src="app/report/all_vehicle_summary.js"></script>
+        <script src="app/report/history_playback.js"></script>
         <script src="app/admin/home.js"></script>
         <script src="app/admin/users.js"></script>
         <script src="app/admin/location.js"></script>
