basic logic function of history playback completed

--- a/public/app/report/driving_records.html
+++ b/public/app/report/driving_records.html
@@ -87,8 +87,8 @@
         </div>
         
     </div>
-    <div class="row" style="text-align:center; padding-top:10em;">
-        <div class="preloader-wrapper medium active" ng-if="!vm.driving_records_full.data.length && vm.search_active || !vm.loaded">
+    <div class="row" style="text-align:center; padding-top:10em;" ng-if="!vm.driving_records_full.data.length && vm.search_active || !vm.loaded">
+        <div class="preloader-wrapper medium active" >
             <div class="spinner-layer spinner-blue">
                 <div class="circle-clipper left">
                 <div class="circle"></div>
