--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/libs/materialize/dist/css/materialize.min.css"></link>
         <link rel="stylesheet" href="/libs/components-font-awesome/css/font-awesome.min.css"></link>
         <link rel="stylesheet" href="/libs/angular-chart.js/dist/angular-chart.min.css"></link>
+        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/flick/jquery-ui.css"></link>
         <link rel="stylesheet" href="/assets/css/style.css">
         <title>Could Vehicle</title>
         <base href="/">
