--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -15,11 +15,54 @@
                     <label for="password">Password</label>
                 </div>
                 <div class="col s12 m12 l12 center">
-                    <div class="col s12 m5 l5 modal-trigger">
+                    <div class="col s12 m5 l5 modal-trigger" ng-if="!vm.log">
                         <a class="btn waves-light" ng-click="vm.forget_password_modal()">Reset</a>
                     </div>
-                    <div class="col s12 m5 l5 push-l2">
+                    <div class="col s12 m5 l5 push-l2" ng-if="!vm.log">
                         <button class="btn waves-light" ng-click="vm.login()">Login</button>
+                    </div>
+                    <div class="col s12 m12 l12" style="text-align:center;" ng-if="vm.log">
+                        <div class="preloader-wrapper medium active" >
+                            <div class="spinner-layer spinner-blue">
+                                <div class="circle-clipper left">
+                                <div class="circle"></div>
+                                </div><div class="gap-patch">
+                                <div class="circle"></div>
+                                </div><div class="circle-clipper right">
+                                <div class="circle"></div>
+                                </div>
+                            </div>
+
+                            <div class="spinner-layer spinner-red">
+                                <div class="circle-clipper left">
+                                <div class="circle"></div>
+                                </div><div class="gap-patch">
+                                <div class="circle"></div>
+                                </div><div class="circle-clipper right">
+                                <div class="circle"></div>
+                                </div>
+                            </div>
+
+                            <div class="spinner-layer spinner-yellow">
+                                <div class="circle-clipper left">
+                                <div class="circle"></div>
+                                </div><div class="gap-patch">
+                                <div class="circle"></div>
+                                </div><div class="circle-clipper right">
+                                <div class="circle"></div>
+                                </div>
+                            </div>
+
+                            <div class="spinner-layer spinner-green">
+                                <div class="circle-clipper left">
+                                <div class="circle"></div>
+                                </div><div class="gap-patch">
+                                <div class="circle"></div>
+                                </div><div class="circle-clipper right">
+                                <div class="circle"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
