tested with live data and fixed bugs encounted with live data

--- a/public/index.html
+++ b/public/index.html
@@ -18,16 +18,16 @@
             <li><a href="" >View</a></li>
         </ul>
         <ul id="dropdown" class="dropdown-content collection dropdown-notification">
-            <li class="collection-item avatar row" style="padding-left: 20px; margin: 0;">
+            <li class="collection-item avatar row" style="padding-left: 20px; margin: 0;" ng-repeat="noti in notification"  ng-click="vm.open_notification(noti, $index)">
                 <div class="col l2">
-                    <i class="fa fa-bolt fa-2x" style="color:yellow;"></i>
+                    <i class="fa fa-2x" ng-class="{'fa-hourglass-half': noti.type === 'speed'}" style="color:{{noti.color}}"></i>
                 </div>
                 <div class="col l10" style="margin-top: 10px;">
-                    <span class="title" style="display: inline;"><b>PLA 3682</b> is over speeding</span>
-                    <p style="color: grey"><i class="fa fa-clock-o" style="height: 0; line-height: 0;"></i> 1 hour ago</p>
+                    <span class="title" style="display: inline;" ng-if="noti.type == 'speed'"><b>{{noti.plate_number}}</b> is over speeding</span>
+                    <p style="color: grey"><i class="fa fa-clock-o" style="height: 0; line-height: 0;"></i> {{Math.abs(Date.now() - noti.time) / 36e5}}</p>
                 </div>
             </li>
-            <li class="collection-item avatar row"  style="padding-left: 20px; margin: 0;">
+            <!--<li class="collection-item avatar row"  style="padding-left: 20px; margin: 0;">
                 <div class="col l2">
                     <i class="fa fa-hourglass-half fa-2x" style="color:#89F589;"></i>
                 </div>
@@ -53,7 +53,7 @@
                     <span class="title" style="display: inline;"><b>DEF 2422</b> is over speeding</span>
                     <p style="color: grey"><i class="fa fa-clock-o" style="height: 0; line-height: 0;"></i> 3 hours ago</p>
                 </div>
-            </li>
+            </li>-->
         </ul>
         <div class="navbar-fixed" style="z-index: 999;" ng-if="user && user_type === 0">
             <nav class="white">
@@ -63,7 +63,7 @@
                     </a>
                     <a href="/dashboard" class="brand-logo blue-text darken-2" ng-class="{'center' : !user }"></a>
                     <ul class="right hide-on-med-and-down" ng-if="user">
-                        <li ng-show="!disturb_off"><a class="dropdown-button blue-text dropdown-test" href="" data-activates="dropdown" data-beloworigin="true"><i class="fa fa-bell"></i><span class="new badge">4</span></a></li> 
+                        <li ng-show="!disturb_off"><a class="dropdown-button blue-text dropdown-test" href="" data-activates="dropdown" data-beloworigin="true"><i class="fa fa-bell"></i><span class="new badge" ng-if="live_noti !== 0">{{live_noti}}</span></a></li> 
                         <li ng-click="vm.disturb()"><a class="blue-text" href=""><i class="fa" ng-class="disturb_off ? 'fa-toggle-off' : 'fa-toggle-on'"></i></a></li>
                         <li><a class="dropdown-button blue-text" style="font-weight:300;" data-activates="user_setting" data-beloworigin="true">{{user.userName}}<i class="fa fa-arrow-down right"></i></a></li>
                         <li ng-if="!admin_page"><a href="/admin" class="blue-text">Admin Dashboard<i class="fa fa-arrow-right right"></i></a></li>
