Basic login of idling notification

--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -17,7 +17,7 @@
                     <td>GROUP NAME</td>
                     <td>SPEED</td>
                     <td>FUEL</td>
-                    <td>TODAY MILLEAGE</td>
+                    <td>MILLEAGE</td>
                     <td>IGNITION</td>
                     <td>LOCATION</td>
                     <td><a href="" ng-click="vm.user_setting_modal()"><i class="fa fa-cogs fa-2x white-text"></i></a></td>
