Renamed oil to fuel

--- a/public/app/report/driving_records.html
+++ b/public/app/report/driving_records.html
@@ -53,7 +53,7 @@
                 <tr>
                     <td>Date</td>
                     <td>Time</td>
-                    <td>Oil(L)</td>
+                    <td>Fuel(L)</td>
                     <td>Temperature(℃)</td>
                     <td>Speed</td>
                     <td>ACC</td>
