Fully Restructured Vehicle Map to allow params

--- a/public/app/dashboard/dashboard.html
+++ b/public/app/dashboard/dashboard.html
@@ -1,19 +1,19 @@
 <div class="navbar-fixed">
     <nav style=' height: 44px; line-height: 44px; background: #444d58;' class="adjust-sidenav">
         <div class="nav-wrapper container">
-            <ul class="left hide-on-med-and-down">
+            <ul class="">
                 <li class="menu"><a ui-sref=".home">Dashboard</a></li>
                 <li class="menu"><a ui-sref=".vehicle_tracking">Vehicle tracking</a></li>
                 <!--<li class="menu"><a ui-sref=".settings">Settings</a></li>-->
                 <li class="menu"><a ui-sref=".reports">Reports</a></li>
                 <li class="menu"><a ui-sref=".toll">Toll</a></li>
             </ul>
-            <ul class="right">
+            <!--<ul class="right">
                 <div style="background: #38414c; height:44px; line-heght:44px;" class="search">
                     <span class="fa fa-search"></span>
                     <input type="text" class="form-controls" placeholder="Search" style="">
                 </div>
-            </ul>
+            </ul>-->
         </div>
     </nav>
 </div>
