--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,8 @@
         <script src="app/home/reset_password.js"></script>
         <script src="app/dashboard/dashboard.js"></script>
         <script src="app/dashboard/home.js"></script>
+        <script src="app/dashboard/list.js"></script>
+        <script src="app/dashboard/map.js"></script>
         <script src="app/dashboard/vehicle_tracking.js"></script>
         <script src="app/toll/toll.js"></script>
         <script src="app/setting/home.js"></script>
