--- a/public/app/dashboard/map.html
+++ b/public/app/dashboard/map.html
@@ -1,7 +1,50 @@
 <div class="col s12 m12 l12" style="    margin-top: -30px;">
         <div class="row" style="margin-bottom: 0px; margin-top:15px;">
             <div class="col s12 m12 l4">
-                <div class="row">
+                <div class="row"  style="text-align:center">
+                    <div class="preloader-wrapper medium active" ng-if="!vm.loaded">
+                        <div class="spinner-layer spinner-blue">
+                            <div class="circle-clipper left">
+                            <div class="circle"></div>
+                            </div><div class="gap-patch">
+                            <div class="circle"></div>
+                            </div><div class="circle-clipper right">
+                            <div class="circle"></div>
+                            </div>
+                        </div>
+
+                        <div class="spinner-layer spinner-red">
+                            <div class="circle-clipper left">
+                            <div class="circle"></div>
+                            </div><div class="gap-patch">
+                            <div class="circle"></div>
+                            </div><div class="circle-clipper right">
+                            <div class="circle"></div>
+                            </div>
+                        </div>
+
+                        <div class="spinner-layer spinner-yellow">
+                            <div class="circle-clipper left">
+                            <div class="circle"></div>
+                            </div><div class="gap-patch">
+                            <div class="circle"></div>
+                            </div><div class="circle-clipper right">
+                            <div class="circle"></div>
+                            </div>
+                        </div>
+
+                        <div class="spinner-layer spinner-green">
+                            <div class="circle-clipper left">
+                            <div class="circle"></div>
+                            </div><div class="gap-patch">
+                            <div class="circle"></div>
+                            </div><div class="circle-clipper right">
+                            <div class="circle"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row"  ng-if="vm.loaded">
                     <div class="col s12 m12 l6">
                         <span>Vehicle Group: </span>
                         <select class="browser-default" ng-model="vm.group_selected" ng-options="group.group for group in vm.group" ng-change="vm.group_update()">
@@ -20,7 +63,7 @@
                         <button class="btn col l12" ng-click="vm.get_map()">Search</button>
                     </div>
                 </div>
-                <div class="row" style="font-size:100%;">
+                <div class="row" style="font-size:100%;"  ng-if="vm.car_details_full">
                     <h5 style="margin-top:1em;">Vehicle Details</h5>
                     <div class="row">
                         <div class="col s3">FLEET</div>
@@ -55,7 +98,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row"   ng-if="vm.car_details_full">
                     <h5>Tyre Details</h5>
                     <div class="col l4">
                         <div class="row center" style="position:relative;">
