List routing from other states

--- a/public/app/dashboard/dashboard.html
+++ b/public/app/dashboard/dashboard.html
@@ -2,7 +2,7 @@
     <nav style=' height: 44px; line-height: 44px; background: #444d58;' class="adjust-sidenav">
         <div class="nav-wrapper container">
             <ul class="">
-                <li class="menu"><a ui-sref=".home">Dashboard</a></li>
+                <li class="menu"><a ui-sref=".list">Dashboard</a></li>
                 <li class="menu"><a ui-sref=".vehicle_tracking">Vehicle tracking</a></li>
                 <!--<li class="menu"><a ui-sref=".settings">Settings</a></li>-->
                 <li class="menu"><a ui-sref=".reports">Reports</a></li>
