Set color and icon for notification

--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,14 @@
         <ul id="dropdown" class="dropdown-content collection dropdown-notification">
             <li class="collection-item avatar row" style="padding-left: 20px; margin: 0;" ng-repeat="noti in notification"  ng-click="vm.open_notification(noti, $index)">
                 <div class="col l2">
-                    <i class="fa fa-2x" ng-class="{'fa-hourglass-half': noti.type === 'idle', 'fa-flask': noti.type === 'fuel', 'fa-truck': noti.type === 'harsh_breaking'}" style="color:{{noti.color}}"></i>
+                    <i class="fa fa-2x" ng-class="{'fa-road': noti.type === 'fatigue', 'fa-hourglass-half': noti.type === 'idle', 'battery-half': noti.type === 'fuel', 'fa-sort-amount-desc': noti.type === 'harsh_breaking', 'fa-tachometer': noti.type === 'speed'}" style="color:{{noti.color}}"></i>
                 </div>
                 <div class="col l10" style="margin-top: 10px;">
                     <span class="title" style="display: inline;" ng-if="noti.type == 'idle'"><b>{{noti.plate_number}}</b> is idling</span>
-                    <span class="title" style="display: inline;" ng-if="noti.type == 'fuel'"><b>{{noti.plate_number}}</b> is consuming fuel</span>
+                    <span class="title" style="display: inline;" ng-if="noti.type == 'fuel'"><b>{{noti.plate_number}}</b> is consuming much fuel</span>
                     <span class="title" style="display: inline;" ng-if="noti.type == 'harsh_breaking'"><b>{{noti.plate_number}}</b> is harsh breaking</span>
                     <span class="title" style="display: inline;" ng-if="noti.type == 'speed'"><b>{{noti.plate_number}}</b> is over speeding</span>
-                    <p style="color: grey"><i class="fa fa-clock-o" style="height: 0; line-height: 0;"></i> {{Math.abs(Date.now() - noti.time) / 36e5}}</p>
+                    <p style="color: grey"><i class="fa fa-clock-o" style="height: 0; line-height: 0;"></i> {{noti.time | date:'medium'}}</p>
                 </div>
             </li>
         </ul>
